# lil-agents-win

./: .eslintrc.cjs  .gitattributes  CLAUDE.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
.github/workflows/: release.yml
assets/: Walking monkey.webm  walk-bruce-01.webm  walk-jazz-01.webm  walk.webm
assets/sounds/: ping-jj.m4a
scripts/: bundle-worker.ps1  convert-videos.ps1  dev.js  download-rg.ps1  icon-gen.ps1
src/main/: index.ts  logger.ts  store.ts  updater.ts
src/main/controller/: AppController.ts  WalkerCharacter.ts  WorkerProcess.ts  tickLoop.ts
src/main/ipc/: channels.ts
src/main/platform/: environment.ts  fullscreen.ts  protocol.ts  taskbar.ts  tray.ts
src/main/sessions/: AgentSession.ts  ClaudeSession.ts  GeminiSession.ts  SessionFactory.ts
src/preload/: popover.ts  walker.ts
src/renderer/popover/: InputBar.tsx  PopoverApp.tsx  TerminalView.tsx  TitleBar.tsx  index.html  main.tsx  popover.css
src/renderer/walker/: WalkerView.tsx  index.html  main.tsx  walker.css
src/shared/: phrases.ts  types.ts
worker/: llm.py  pyproject.toml  related.py  worker.py
worker/prompts/: classify.txt  concept_clustering.txt  entity_update.txt  summarize.txt  write_article.txt
